--- a/platformio.ini
+++ b/platformio.ini
@@ -17,24 +17,19 @@ monitor_filters = direct
 board_build.partitions = partitions.csv
 monitor_speed = 115200
 build_flags = 
-	-D CORE_DEBUG_LEVEL=5
+	-D CORE_DEBUG_LEVEL=4
 	-D ARDUINO_USB_MODE=1
 	-D CONFIG_ZB_ENABLED=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
-	-D ZIGBEE_MODE_ED
-        -lesp_zb_api_ed -lesp_zb_cli_command -lzboss_stack.ed -lzboss_port
+	-D ZIGBEE_MODE_ZCZR
+	-lesp_zb_api_zczr -lesp_zb_cli_command -lzboss_stack.zczr -lzboss_port
 
 ; Depending on the Zigbee mode add this
-; -D ZIGBEE_MODE_ZCZR
-; -lesp_zb_api_zczr -lesp_zb_cli_command -lzboss_stack.zczr -lzboss_port
-; -D ZIGBEE_MODE_ED
-; -lesp_zb_api_ed -lesp_zb_cli_command -lzboss_stack.ed -lzboss_port
-; -D ZIGBEE_MODE_GPD
-; -lesp_zb_api_gpd  -lesp_zb_cli_command -lzboss_stack.gpd -lzboss_port
-; -D ZIGBEE_MODE_RCP
-; -lesp_zb_api_rcp -lesp_zb_cli_command -lzboss_stack.rcp -lzboss_port
-board_build.embed_txtfiles = 
-	managed_components/espressif__esp_insights/server_certs/https_server.crt
-	managed_components/espressif__esp_rainmaker/server_certs/rmaker_mqtt_server.crt
-	managed_components/espressif__esp_rainmaker/server_certs/rmaker_claim_service_server.crt
-	managed_components/espressif__esp_rainmaker/server_certs/rmaker_ota_server.crt
+	; -D ZIGBEE_MODE_ED
+    ;     -lesp_zb_api_ed -lesp_zb_cli_command -lzboss_stack.ed -lzboss_port
+	; -D ZIGBEE_MODE_ED
+	; -lesp_zb_api_ed -lesp_zb_cli_command -lzboss_stack.ed -lzboss_port
+	; -D ZIGBEE_MODE_GPD
+	; -lesp_zb_api_gpd  -lesp_zb_cli_command -lzboss_stack.gpd -lzboss_port
+	; -D ZIGBEE_MODE_RCP
+	; -lesp_zb_api_rcp -lesp_zb_cli_command -lzboss_stack.rcp -lzboss_port
