--- a/thermostat/platformio.ini
+++ b/thermostat/platformio.ini
@@ -16,8 +16,10 @@ board = esp32-c6-devkitm-1
 monitor_filters = direct
 board_build.partitions = partitions.csv
 monitor_speed = 115200
+upload_port = /dev/ttyACM1
+monitor_port = /dev/ttyACM1
 build_flags = 
-	-D CORE_DEBUG_LEVEL=4
+	-D CORE_DEBUG_LEVEL=5
 	-D ARDUINO_USB_MODE=1
 	-D CONFIG_ZB_ENABLED=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
